working version without normal filtration

--- a/gallery.html
+++ b/gallery.html
@@ -26,11 +26,20 @@
     </header>
 
 
-    <h1 style="text-align: center;"> Тут показуються всі ваші завантажені фотографії </h1>
+    <h1 class="text-3xl font-semibold text-center text-gray-800 my-6">
+        Тут показуються всі ваші завантажені фотографії
+    </h1>
 
     <div class="add-container">
-    <input type="file" id="addImageInput" style="display: none;" multiple>
-    <button class="add-btn" onclick="document.getElementById('addImageInput').click();">Додати зображення</button>
+        <input type="file" id="addImageInput" style="display: none;" multiple>
+        <button class="add-btn" onclick="document.getElementById('addImageInput').click();" >Додати зображення</button>
+        
+        <select id="imageType" class = "select-style">
+            <option value="portrait">Портрет</option>
+            <option value="landscape">Пейзаж</option>
+            <option value="macro">Макро</option>
+          </select>      
+
     </div>
 
     <div id="imageGallery" class="image-gallery"></div>
@@ -40,10 +49,20 @@
       </div>
       
 
+    <div class = "flex justify-center m-4">
+        <button 
+        class = "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded justify-center"
+        id = "delete-photos" > 
+        Видалити фотографії </button>
+    </div>
+
+    <div id="typeDisplayContainer" class = "display-type"></div>
+
     <div id="ls_photoes" class="LS_photoes"></div>
 
 
     <script src = "scripts.js" defer ></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
 </body>
 </html>
